Fix screen media queries that were broken in prev. commit

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,17 +3,8 @@
   background-color: $color;
 }
 
-// Using media queries with like this:
-// @include media-query(maxwidth) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
 @mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+    @media screen and (min-width: $device) { @content; }
 }
 
 // convenience shorthand for the mixin above,
